ex4/testdata/typechecker/error/IfTest-err1.java
class IfTest {
	public static void main(String[] a){
            if (23) {} else {} // TE
        }
}
